# chatroom

./: .dockerignore  .gitignore  BACKEND_README.md  DOCKER_README.md  Dockerfile  README.md  chatroom.spec  config.py  docker-compose.prod.yml  docker-compose.yml  init_db.py  ip.txt  main.py  migrate_private_chat.py  package-lock.json  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  crypto_utils.py  database.py  models.py  socket_events.py  utils.py
app/api/: __init__.py  auth.py  chat.py  messages.py  rooms.py  upload.py  user_profile.py
app/auth/: __init__.py  forms.py  routes.py
app/chat/: __init__.py  events.py  forms.py  routes.py
app/core/: __init__.py  deps.py  security.py
app/main/: __init__.py  routes.py
app/schemas/: __init__.py  message.py  room.py  user.py
app/socket/: __init__.py  events.py
app/static/css/: style.css
app/templates/: base.html  index.html  index1.html  login.html
app/templates/auth/: edit_profile.html  login.html  profile.html  register.html
app/templates/chat/: create_room.html  index.html  room.html
frontend/: .eslintrc.js  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  index.tsx  input.css  styles.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/chat/: ChatRoom.tsx  CreatePrivateChatModal.tsx  FileUpload.tsx  MessageInput.tsx  MessageList.tsx  PrivateChatList.tsx  RoomList.tsx
frontend/src/components/profile/: ProfilePage.tsx  UserProfilePage.tsx
frontend/src/components/ui/: PasswordPrompt.tsx  avatar-upload.tsx  badge.tsx  button.tsx  dialog.tsx  error-boundary.tsx  scroll-area.tsx  tooltip.tsx  user-profile-modal.tsx
frontend/src/contexts/: AuthContext.tsx  ChatContext.tsx
frontend/src/lib/: animations.ts
frontend/src/pages/: ChatPage.tsx  ProfilePage.tsx
frontend/src/services/: api.ts  privateChatService.ts  socket.ts
frontend/src/types/: index.ts
frontend/src/utils/: encryption.ts
instance/: app.db  chatroom.db
migrations/versions/: add_user_profile_fields.py
scripts/: healthcheck.sh
uploads/avatars/: .gitkeep
