[project]
name = "chatroom"
version = "0.1.0"
description = "Flask聊天室应用"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eventlet>=0.40.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "flask-login>=0.6.3",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "requests>=2.32.4",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# PyInstaller配置
[tool.pyinstaller]
name = "chatroom"
console = true
onefile = true

# 修复hatchling构建配置
[tool.hatch.build.targets.wheel]
packages = ["app"]  # 指定要包含的包目录
include = [
    "run.py",
    "config.py",
    "init_db.py",
    "migrations/",
    "frontend/build/",
]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/migrations", 
    "/frontend/build",
    "run.py",
    "config.py",
    "init_db.py",
    "README.md",
    "BACKEND_README.md",
]
