[project]
name = "chatroom"
version = "0.1.0"
description = "FastAPI聊天室应用"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-socketio>=5.10.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-decouple>=3.8",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.0",
    "requests>=2.32.4",
    "python-dateutil>=2.8.2",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "pyinstaller>=6.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# PyInstaller配置
[tool.pyinstaller]
name = "chatroom"
console = true
onefile = true

# 修复hatchling构建配置
[tool.hatch.build.targets.wheel]
packages = ["app"]  # 指定要包含的包目录
include = [
    "run.py",
    "config.py",
    "init_db.py",
    "migrations/",
    "frontend/build/",
]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/migrations", 
    "/frontend/build",
    "run.py",
    "config.py",
    "init_db.py",
    "README.md",
    "BACKEND_README.md",
]
